# proof-of-reserves

./: .env.example  .gitignore  CODESPACES_HANDOFF.md  README.md  package-lock.json  package.json  railway.json
.devcontainer/: devcontainer.json
circuits/: reserves.circom
contract/: Cargo.toml
contract/contracts/proof-of-reserves/: Cargo.toml
contract/contracts/proof-of-reserves/src/: lib.rs  test.rs  vk.rs
contract/src/: lib.rs
frontend/: index.html
keys/: reserves.r1cs  reserves.sym  reserves_final.zkey  verification_key.json
keys/reserves_js/: reserves.wasm
scripts/: deploy.js  generate_proof.js  server.js  topup_reserve.js  verify_on_chain.js  vk_to_rust.js
