[workspace]
resolver = "2"
members = [
    "contracts/*",
]

[workspace.dependencies]
soroban-sdk = { version = "26.1.0", features = ["alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
